--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Local .terraform directories
 **/.terraform/*
+**/.secret
 
 # .tfstate files
 *.tfstate
@@ -14,6 +15,9 @@ crash.log
 #
 # example.tfvars
 
+**/terraform.tfvars
+**/.terraform.lock.hcl
+
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
 override.tf
@@ -27,3 +31,4 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+examples/infrastructure/.secret_old
